--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
       <ul class="nav navbar-nav">
         <li ng-class="getClass('/rankings')"><a href="#/rankings"><span class="glyphicon glyphicon-list"></span> Rankings</a></li>
         <li ng-class="getClass('/draft-aid')"><a href="#/draft-aid"><span class="glyphicon glyphicon-stats"></span> Draft Aid</a></li>
+        <li ng-class="getClass('/about')" class="pull-right"><a href="#/about"><span class="glyphicon glyphicon-user"></span> About</a></li>
       </ul>
     </div>
   </nav>
