--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,13 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
+  <div id="wrap">
+    <div ng-view></div>
+  </div>
 
-  <div ng-view></div>
+  <footer class="footer pull-right">
+    <small>© 2014 <a href="http://jayzheng.com/ff">Jay Zheng</a>, All rights reserved.</small>
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
