--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,11 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div id="wrap">
+    <div class="alert alert-warning fade in" role="alert">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+      Server is due for maintenance tonight, <strong>19 August, 2014</strong>, between 8:00pm and 4:00am MDT. The maintenance will include approximately <strong>30 minutes</strong> of downtime.
+    </div>
+
     <div ng-view></div>
   </div>
 
@@ -44,6 +49,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
