move some things around, no major changes

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,12 @@
       <ul class="nav navbar-nav">
         <li ng-class="getClass('/rankings')"><a href="#/rankings"><i class="fa fa-list-ol"></i> Rankings</a></li>
         <li ng-class="getClass('/draft-aid')"><a href="#/draft-aid"><i class="fa fa-desktop"></i> Draft Aid</a></li>
-        <li ng-class="getClass('/about')" class="pull-right"><a href="#/about"><i class="fa fa-male"></i> About</a></li>
+        <li ng-class="getClass('/about')"><a href="#/about"><i class="fa fa-male"></i> About</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav pull-right">
+        <li><a href="http://www.fantasypros.com/nfl/rankings/consensus-cheatsheets.php" target="_blank"><small>FantasyPros</small></a></li>
+        <li><a href="http://www.borischen.co" target="_blank"><small>borischen.co</small></a></li>
       </ul>
     </div>
   </nav>
@@ -37,7 +42,7 @@
   </div>
 
   <footer class="footer pull-right">
-    <small>© 2014 <a href="http://jayzheng.com/ff">Jay Zheng</a>, All rights reserved.</small>
+    <small>© 2014 <a href="http://jayzheng.com/ff">Jay Zheng</a></small>
   </div>
 
   <!-- In production use:
