use remote data

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,10 @@
   <script src="js/services/rankings.js"></script>
   <script src="js/services/draft_aid.js"></script>
 
+  <!-- Resources -->
+  <script src="js/resources/main.js"></script>
+  <script src="js/resources/ranking.js"></script>
+
   <!-- Controllers -->
   <script src="js/controllers/main.js"></script>
   <script src="js/controllers/rankings_ctrl.js"></script>
