--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
   <script src="js/app.js"></script>
+  <script src="js/config.js"></script>
 
   <!-- Services -->
   <script src="js/services/main.js"></script>
