cache ranking index query

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-default" role="navigation" ng-controller="NavBarCtrl">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Fantasy Football</a>
+        <a class="navbar-brand" href="#/draft-aid">Fantasy Football</a>
       </div>
 
       <ul class="nav navbar-nav">
