add last updated at

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
       </ul>
 
       <ul class="nav navbar-nav pull-right">
+        <li><a><small>Last Updated: <strong>{{updatedAt | date: "mediumDate" }}</strong></small></a></li>
         <li><a href="http://www.fantasypros.com/nfl/rankings/consensus-cheatsheets.php" target="_blank"><small>FantasyPros</small></a></li>
         <li><a href="http://www.borischen.co" target="_blank"><small>borischen.co</small></a></li>
       </ul>
